--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,8 @@ h1 {
   font-weight: bolder;
 }
 
-h1 div {
+h1 span {
+  display: block;
   padding: 1em 0;
   font-size: 16px;
   font-weight: normal;
