--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ a {
 }
 
 /* HEADER */
+
 /* navbar */
 .navbar {
   display: flex;
@@ -43,17 +44,14 @@ a {
   justify-content: space-between;
   align-items: center;
 }
-
 .navbar > *:not(.main-nav) {
   padding: 1em 20px;
 }
-
 .navbar .main-nav {
   display: flex;
   width: 100%;
   order: 1;
 }
-
 .navbar .main-nav a {
   text-align: center;
   width: 50vw;
@@ -62,13 +60,11 @@ a {
   border-bottom: 3px solid var(--clr-ltr);
   transition: border-bottom 0.5s ease;
 }
-
 .navbar .main-nav a:hover {
   font-weight: 600;
   color: var(--clr);
   border-bottom: 3px solid var(--clr);
 }
-
 .navbar a#subscribe {
   color: var(--clr);
   font-weight: bold;
@@ -84,21 +80,15 @@ h1 {
   font-size: 28px;
   font-weight: bolder;
 }
-
 h1 span {
   display: block;
   padding: 1em 0;
-  font-size: 16px;
+  font-size: 1em;
   font-weight: normal;
 }
+
 .tags {
   display: block;
-}
-@media only screen and (min-width: 768px) {
-  .tags {
-    display: inline-flex;
-    align-items: center;
-  }
 }
 
 .tag {
@@ -111,12 +101,6 @@ h1 span {
   text-transform: capitalize;
   padding: 0 10px 0 5px;
 }
-@media only screen and (min-width: 768px) {
-  .tag {
-    margin: 0 0 0 2em;
-  }
-}
-
 .tag i {
   position: relative;
   left: -8px;
@@ -124,7 +108,6 @@ h1 span {
   border-radius: 50%;
   padding: 8px 9px;
 }
-
 .tag:hover {
   background: var(--clr-ltr);
 }
@@ -143,7 +126,6 @@ i.fa-info {
   background: none;
   cursor: pointer;
 }
-
 .search {
   background: var(--clr);
   border: 0 0 1px 1px;
@@ -156,45 +138,31 @@ form {
   border-radius: 15px;
   border: 1px solid var(--alt-clr);
 }
-
 form input {
   font-weight: bold;
   border: none;
   padding: 1em;
 }
-
 form input:focus {
   outline: none;
 }
-
 form .fa-map-marker-alt {
   border-radius: 15px 0 0 15px;
   padding: 17px;
   background: var(--alt-clr);
 }
-
 form .search-icon {
   float: right;
   border: none;
   border-radius: 15px;
   background: var(--clr);
 }
-
 form .fa-search {
   padding: 1em 0.7em;
   color: white;
 }
-
 form .search {
   display: none;
-}
-@media only screen and (min-width: 768px) {
-  form .search {
-    display: inline-block;
-  }
-  form .search-icon {
-    display: none;
-  }
 }
 
 /* LODGING & ACTIVITIES */
@@ -202,16 +170,9 @@ form .search {
   padding: 1em;
 }
 
-@media only screen and (min-width: 768px) {
-  .bloc {
-    padding: 1em 2em;
-    border-radius: 15px;
-  }
-}
-
 .cards {
-  border: 1px solid red;
   display: flex;
+  flex-flow: row wrap;
 }
 
 .card {
@@ -222,11 +183,8 @@ form .search {
   border: 5px solid white;
   border-radius: 15px;
   overflow: hidden;
-  /* 
-  width: 250px; */
   height: 250px;
 }
-
 .card:hover {
   box-shadow: 2px 2px 12px rgba(61, 40, 40, 0.4);
 }
@@ -240,70 +198,39 @@ form .search {
 }
 
 /* LODGING */
-
 #lodging {
   display: flex;
   flex-flow: row wrap;
 }
-
-@media only screen and (min-width: 768px) {
-  #lodging {
-    margin: 20px 0;
-  }
-}
-
 #lodging .bloc {
   margin: 1em 0;
 }
 
-@media only screen and (min-width: 768px) {
-  #lodging .bloc {
-    margin: 20px 10px;
-    background: var(--alt-clr);
-  }
+.bloc-city .cards,
+.bloc-popular .cards {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0 20px;
+  justify-items: stretch;
 }
 
 /* city */
-.bloc-city {
-  width: 100vw;
-}
-
-@media only screen and (min-width: 768px) {
-  .bloc-city {
-    width: 60%;
-  }
-}
-
-.bloc-city .cards {
-  flex-flow: row wrap;
-}
-
-/* @media only screen and (min-width: 768px) {
-  .bloc-city .cards {
-    width: calc(100% / 3);
-  }
-} */
-
 .card-city {
   margin: 10px 0;
 }
-
 .card-city .img-wrapper {
   height: 150px;
   width: 100%;
   margin: 0;
 }
-
 .card-city img {
   object-fit: cover;
   height: 150px;
   width: 100%;
 }
-
 .card-city .text-wrapper {
   padding: 1em;
 }
-
 .card-city h3,
 .card-city p {
   margin: 0.5em 0;
@@ -316,84 +243,52 @@ form .search {
   order: -1;
   width: 100vw;
 }
-
-@media only screen and (min-width: 768px) {
-  .bloc-popular {
-    order: 0;
-    width: 20%;
-  }
-}
-
 .bloc-popular .fa-chart-line {
   float: right;
 }
-
 .bloc-popular .cards {
   display: block;
-  width: 100%;
 }
 
 .card-popular {
   display: flex;
-  margin: 20px 0;
+  margin: 10px 0;
   height: 150px;
-  min-width: 300px;
 }
-
 .card-popular .img-wrapper {
   height: 100%;
   width: 150px;
   margin: 0;
 }
-
 .card-popular img {
   object-fit: cover;
   width: 150px;
   height: 100%;
 }
-
 .card-popular .text-wrapper {
   padding: 1em;
   padding-top: 0;
   margin: 0;
   position: relative;
 }
-
 .card-popular .vote {
   position: absolute;
   bottom: 10px;
 }
 
 /* ACTIVITIES */
-
 #activities {
   display: grid;
 }
-
 #activities .bloc {
   margin: 1em 0;
-}
-
-@media only screen and (min-width: 768px) {
-  #activities .bloc {
-    margin: 20px 10px;
-  }
 }
 
 .masonry {
   columns: 1;
   column-gap: 20px;
 }
-@media only screen and (min-width: 768px) {
-  .masonry {
-    columns: 2;
-  }
-}
-@media only screen and (min-width: 1024px) {
-  .masonry {
-    columns: 4;
-  }
-}
+
 .card-activities {
   border: none;
   display: inline-block;
@@ -401,19 +296,16 @@ form .search {
   margin: 10px 0;
   /* margin-bottom: 20px; */
 }
-
 .card-activities .img-wrapper {
   height: 180px;
   width: 100%;
   margin: 0;
 }
-
 .card-activities img {
   object-fit: cover;
   height: 180px;
   width: 100%;
 }
-
 .card-activities .text-wrapper {
   margin: 1em;
 }
@@ -429,8 +321,97 @@ footer {
 .navbar-btm {
   width: 300px;
 }
-
 .navbar-btm a {
   display: block;
   padding-bottom: 1em;
+}
+
+/* ______TABLETS________ */
+
+@media only screen and (min-width: 768px) {
+  .tags {
+    display: inline-flex;
+    align-items: center;
+  }
+
+  .tag {
+    margin: 0 0 0 2em;
+  }
+
+  form .search {
+    display: inline-block;
+  }
+
+  form .search-icon {
+    display: none;
+  }
+
+  .bloc {
+    padding: 1em 2em;
+    border-radius: 15px;
+  }
+
+  #lodging {
+    margin: 20px 0;
+  }
+
+  #lodging .bloc {
+    margin: 20px 10px;
+    background: var(--alt-clr);
+  }
+
+  .bloc-city .cards,
+  .bloc-popular .cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  #activities .bloc {
+    margin: 20px 10px;
+  }
+  .masonry {
+    columns: 2;
+  }
+}
+
+/* ______DESKTOPS________ */
+
+@media only screen and (min-width: 1224px) {
+  #lodging {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 20px;
+  }
+
+  .bloc h3 {
+    font-size: 1em;
+  }
+  .bloc p {
+    font-size: 15px;
+  }
+
+  .bloc-city .cards {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .bloc-popular .cards {
+    grid-template-columns: 1fr;
+    grid-gap: 0 20px;
+  }
+
+  .bloc-popular {
+    order: 0;
+    width: unset;
+  }
+  .card-popular {
+    margin: 20px 0;
+    width: 100%;
+  }
+
+  .masonry {
+    columns: 4;
+  }
+
+  .navbar-btm {
+    width: calc(80% / 3);
+  }
 }
