--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ h1 {
 h1 span {
   display: block;
   padding: 1em 0;
-  font-size: 1em;
+  font-size: 16px;
   font-weight: normal;
 }
 
@@ -126,15 +126,10 @@ i.fa-info {
   background: none;
   cursor: pointer;
 }
-.search {
-  background: var(--clr);
-  border: 0 0 1px 1px;
-  border-radius: 10px;
-}
 
 form {
   height: 50px;
-  width: 95%;
+  max-width: 400px;
   border-radius: 15px;
   border: 1px solid var(--alt-clr);
 }
@@ -359,7 +354,14 @@ footer {
   }
 
   form .search {
+    float: right;
+    color: white;
+    font-weight: bold;
+    padding: 1.3em;
     display: inline-block;
+    background: var(--clr);
+    border: none;
+    border-radius: 0 10px 10px 0;
   }
 
   form .search-icon {
@@ -403,7 +405,7 @@ footer {
   }
 
   .bloc h3 {
-    font-size: 1em;
+    font-size: 16px;
   }
   .bloc p {
     font-size: 15px;
