--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,11 +354,11 @@ footer {
   }
 
   form .search {
+    display: inline;
     float: right;
     color: white;
     font-weight: bold;
     padding: 1.3em;
-    display: inline-block;
     background: var(--clr);
     border: none;
     border-radius: 0 10px 10px 0;
