--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -428,6 +428,9 @@ footer {
     height: 25%;
     /* height: 200px; */
   }
+  /* .div1 { grid-area: 1 / 1 / 3 / 2; }
+.div2 { grid-area: 1 / 2 / 2 / 3; }
+.div3 { grid-area: 2 / 2 / 3 / 3; } */
 
   .card-activities .img-wrapper {
     height: 100%;
