--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,37 +272,25 @@ form .search {
 }
 
 /* ACTIVITIES */
-#activities {
-  display: grid;
-}
-#activities .bloc {
-  margin: 1em 0;
-}
-
-.masonry {
-  columns: 1;
-  column-gap: 20px;
-}
-
 .card-activities {
   border: none;
   display: inline-block;
   vertical-align: top;
-  margin: 10px 0;
-  /* margin-bottom: 20px; */
+  margin: 10px 0 20px;
 }
 .card-activities .img-wrapper {
-  height: 180px;
+  height: 190px;
   width: 100%;
+  max-width: 711px;
   margin: 0;
 }
 .card-activities img {
   object-fit: cover;
-  height: 180px;
+  height: 190px;
   width: 100%;
 }
 .card-activities .text-wrapper {
-  margin: 1em;
+  margin: 0 0.5em;
 }
 
 /* FOOTER */
@@ -384,73 +372,63 @@ footer {
 
   .bloc-city .cards,
   .bloc-popular .cards {
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
 
   #activities .bloc {
     margin: 20px 10px;
   }
-  
+
   .masonry {
-    display: flex;
-    flex-flow: row wrap;
+    display: grid;
+    gap: 0 30px;
   }
 
   .pattern-3-cards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 2fr 1fr;
+    grid-template-rows: 1.5fr 1fr;
+    gap: 0 30px;
     grid-template-areas:
       "big medium"
       "big small";
+    height: 480px;
+    margin: 1em 0;
   }
   .pattern-3-cards-inverted {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr 1.5fr;
-    gap: 20px;
     grid-template-areas:
       "big small"
       "big medium";
   }
   .big {
     grid-area: big;
-    /* height: 500px; */
-    height: 100%;
+    height: 480px;
   }
   .medium {
     grid-area: medium;
-    height: 75%;
-    /* height: 300px; */
+    height: 250px;
   }
   .small {
     grid-area: small;
-    height: 25%;
-    /* height: 200px; */
+    height: 200px;
   }
-  /* .div1 { grid-area: 1 / 1 / 3 / 2; }
-.div2 { grid-area: 1 / 2 / 2 / 3; }
-.div3 { grid-area: 2 / 2 / 3 / 3; } */
-
-  .card-activities .img-wrapper {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-  }
-  .card-activities img {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-  }
-  
+  .big .img-wrapper,
   .big img {
-    height: 450px;
+    height: 430px;
   }
+  .medium .img-wrapper,
   .medium img {
-    height: 250px;
+    height: 200px;
   }
+  .small .img-wrapper,
   .small img {
     height: 150px;
+  }
+
+  .card-activities h3 {
+    margin: 0.5em;
   }
 }
 
@@ -475,6 +453,7 @@ footer {
   }
 
   .bloc-popular .cards {
+    display: grid;
     grid-template-columns: 1fr;
     grid-gap: 0 20px;
   }
@@ -486,6 +465,19 @@ footer {
   .card-popular {
     margin: 20px 0;
     width: 100%;
+  }
+  .card-popular h3 {
+    margin-bottom: 0;
+  }
+  .card-popular p {
+    margin-top: 0.5em;
+  }
+  .masonry {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .card-activities h3 {
+    margin: 1em 0.5em;
   }
 
   .navbar-btm {
