--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  font-size: 16px;
+  font-size: 15px;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -31,8 +31,13 @@ i.clr-black {
   color: black;
 }
 
+i.fa-star {
+  font-size: 12px;
+}
+
 a {
   text-decoration: none;
+  color: black;
 }
 
 /* HEADER */
@@ -57,7 +62,7 @@ a {
   width: 50vw;
   padding: 1em;
   color: black;
-  border-bottom: 3px solid var(--clr-ltr);
+  border-bottom: 3px solid var(--alt-clr);
   transition: border 0.5s ease;
 }
 .navbar .main-nav a:hover {
@@ -76,14 +81,14 @@ a {
 }
 
 h1 {
-  margin-right: 1em;
-  font-size: 28px;
+  margin-right:1em;
+  font-size: 22px;
   font-weight: bolder;
 }
 h1 span {
   display: block;
   padding: 1em 0;
-  font-size: 16px;
+  font-size: initial;
   font-weight: normal;
 }
 
@@ -97,16 +102,20 @@ h1 span {
   border: 1px solid var(--alt-clr);
   border-radius: 15px;
   margin: 1em;
+  margin-left: 0;
   font-weight: bold;
   text-transform: capitalize;
-  padding: 0 10px 0 5px;
+  padding: 0 10px;
 }
 .tag i {
   position: relative;
-  left: -8px;
+  left: -12px;
   background: var(--clr-ltr);
   border-radius: 50%;
-  padding: 8px 9px;
+  padding: 10px;
+}
+.tag i.fa-child {
+  padding: 10px 12px;
 }
 .tag:hover {
   background: var(--clr-ltr);
@@ -115,8 +124,11 @@ h1 span {
 i.fa-info {
   border: 1px solid var(--alt-clr);
   border-radius: 50%;
-  padding: 7px 12px;
+  padding: 5px 10px;
   margin-right: 1em;
+  float: left;
+  position: relative;
+  top: -5px;
 }
 .show-more {
   padding: 1em 0;
@@ -129,9 +141,10 @@ i.fa-info {
 
 form {
   height: 50px;
-  max-width: 400px;
+  max-width: 300px;
   border-radius: 15px;
   border: 1px solid var(--alt-clr);
+  position: relative;
 }
 form input {
   font-weight: bold;
@@ -147,13 +160,14 @@ form .fa-map-marker-alt {
   background: var(--alt-clr);
 }
 form .search-icon {
-  float: right;
+  position: absolute;
+  right: 0;
   border: none;
   border-radius: 15px;
   background: var(--clr);
 }
 form .fa-search {
-  padding: 1em 0.7em;
+  padding: 17px 10px;
   color: white;
 }
 form .search {
@@ -189,7 +203,7 @@ form .search {
 }
 
 .star-empty {
-  color: var(--clr-ltr);
+  color: var(--alt-clr);
 }
 
 /* LODGING */
@@ -261,10 +275,18 @@ form .search {
   height: 100%;
 }
 .card-popular .text-wrapper {
-  padding: 1em;
+  padding: 1em 0.5em;
   padding-top: 0;
   margin: 0;
   position: relative;
+}
+.card-popular h3 {
+  margin-bottom: 0;
+  margin-right: 0.2em;
+  font-size: 15px !important;
+}
+.card-popular p {
+  margin-top: 0.5em;
 }
 .card-popular .vote {
   position: absolute;
@@ -441,13 +463,6 @@ footer {
     grid-gap: 20px;
   }
 
-  .bloc h3 {
-    font-size: 16px;
-  }
-  .bloc p {
-    font-size: 15px;
-  }
-
   .bloc-city .cards {
     grid-template-columns: repeat(3, 1fr);
   }
@@ -465,12 +480,6 @@ footer {
   .card-popular {
     margin: 20px 0;
     width: 100%;
-  }
-  .card-popular h3 {
-    margin-bottom: 0;
-  }
-  .card-popular p {
-    margin-top: 0.5em;
   }
   .masonry {
     grid-template-columns: repeat(2, 1fr);
