--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  font-size: 15px;
+  font-size: 16px;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -96,29 +96,30 @@ h1 span {
   display: block;
   margin: 2em 0;
 }
-.tags h2 {
-  font-size: 16px;
+.tags div {
+  font-weight: bold;
 }
 .tag {
   transition: all 0.5s ease;
   background: white;
-  border: 1px solid var(--alt-clr);
-  border-radius: 15px;
-  margin: 1em;
+  border: 2px solid var(--alt-clr);
+  border-radius: 25px;
+  margin: 0.5em 1em;
   margin-left: 0;
   font-weight: bold;
   text-transform: capitalize;
   padding: 0 10px;
+  font-size: 14px;
 }
 .tag i {
   position: relative;
   left: -12px;
   background: var(--clr-ltr);
   border-radius: 50%;
-  padding: 10px;
+  padding: 15px;
 }
 .tag i.fa-child {
-  padding: 10px 12px;
+  padding: 15px 17px;
 }
 .tag:hover {
   background: var(--clr-ltr);
@@ -128,7 +129,7 @@ i.fa-info {
   border: 1px solid var(--alt-clr);
   border-radius: 50%;
   padding: 5px 10px;
-  margin-right: 1em;
+  margin-right: 0.5em;
   float: left;
   position: relative;
   top: -5px;
@@ -153,6 +154,7 @@ form input {
   font-weight: bold;
   border: none;
   padding: 1em;
+  font-size: 16px;
 }
 form input:focus {
   outline: none;
@@ -201,10 +203,6 @@ form .search {
   box-shadow: 2px 2px 12px rgba(61, 40, 40, 0.4);
 }
 
-.low-price {
-  font-weight: bold;
-}
-
 .star-empty {
   color: var(--alt-clr);
 }
@@ -242,7 +240,7 @@ form .search {
   width: 100%;
 }
 .card-city .text-wrapper {
-  padding: 1em;
+  padding: 0.5em 1em;
 }
 .card-city h3,
 .card-city p {
@@ -270,24 +268,22 @@ form .search {
 }
 .card-popular .img-wrapper {
   height: 100%;
-  width: 150px;
+  width: 130px;
   margin: 0;
 }
 .card-popular img {
   object-fit: cover;
-  width: 150px;
+  width: 130px;
   height: 100%;
 }
 .card-popular .text-wrapper {
-  padding: 1em 0.5em;
-  padding-top: 0;
+  padding: 0 0 1em 1em;
   margin: 0;
+  font-size: 15px;
   position: relative;
 }
 .card-popular h3 {
   margin-bottom: 0;
-  margin-right: 0.2em;
-  font-size: 15px !important;
 }
 .card-popular p {
   margin-top: 0.5em;
@@ -302,21 +298,22 @@ form .search {
   border: none;
   display: inline-block;
   vertical-align: top;
-  margin: 10px 0 20px;
+  margin: 10px 0;
   width: 100%;
+  height: 180px;
 }
 .card-activities .img-wrapper {
-  height: 190px;
+  height: 120px;
   width: 100%;
   margin: 0;
 }
 .card-activities img {
   object-fit: cover;
-  height: 190px;
+  height: 120px;
   width: 100%;
 }
 .card-activities .text-wrapper {
-  margin: 0 0.5em;
+  margin: 0 0 0 1em;
 }
 
 /* FOOTER */
@@ -369,7 +366,14 @@ footer {
   }
 
   .tag {
-    margin: 0 0 0 0.5em;
+    font-size: 13px;
+    margin: 0 0 0 1em;
+  }
+  .tag i {
+    padding: 10px;
+  }
+  .tag i.fa-child {
+    padding: 10px 12px;
   }
 
   form {
@@ -414,7 +418,13 @@ footer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
-
+.card-city {
+    height: 220px;
+}
+.card-city .img-wrapper,
+.card-city img {
+  height: 120px;
+}
   #activities .bloc {
     margin: 20px 0;
     padding: 1em;
@@ -433,7 +443,7 @@ footer {
     grid-template-areas:
       "big medium"
       "big small";
-    height: 480px;
+    height: 470px;
     margin: 1em 0;
   }
   .pattern-3-cards-inverted {
@@ -444,7 +454,7 @@ footer {
   }
   .big {
     grid-area: big;
-    height: 480px;
+    height: 470px;
   }
   .medium {
     grid-area: medium;
@@ -456,7 +466,7 @@ footer {
   }
   .big .img-wrapper,
   .big img {
-    height: 430px;
+    height: 420px;
   }
   .medium .img-wrapper,
   .medium img {
